[package]
name = "swc-plugin-transform-react-createelement-to-jsx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
swc_plugin = "*"

[dev-dependencies]
swc_ecma_parser = "0.105.0"
swc_ecma_transforms_base = "0.87.2"
swc_ecma_transforms_testing = "0.89.0"
